--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
     justify-content: space-between;
 }
 
+.logo{
+    margin-top: 10px;
+    margin-left: 50px;
+}
+
 .navbar ul{
     display: flex;
     gap: 20px;
@@ -36,19 +41,19 @@
     flex-wrap: wrap;
     gap: 10px;
     margin-left: 20px;
-    margin-top: 30px;
-    /* justify-content: space-between; */
+    margin-top: 30px; 
 }
 
 .quote{
-    height: 200px;
-    width: 200px;
-    border: 2px solid black;
+    border-bottom: 2px solid gray;
+    width: 100%;
+    margin-right: 73px;
+    margin-left: 30px;
+    padding-bottom: 10px;
 }
 
 .myBtn{
     align-items: center;
-    /* background-color: red; */
     justify-content: center;
     display: flex;
     margin-top: 20px;
